# TK

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt
include/TK/: Allocator.h  Any.h  Basic.h  Entity.h  Error.h  Properties.h  Range.h  Renderer.h  String.h  Window.h
include/TK/Containers/: Queue.h
include/TK/Math/: Vector.h
src/Demo/: Demo.c
src/TK/: Allocator.c  Entity.c  Properties.c  String.c
src/TK/Platform/SDL/: Common.c  Common.h  Update.c  Window.c
src/TK/Renderer/: OpenGL.c  OpenGL.h
